# sis-api/swagger_server/controllers/user_controller.py
@@ -1,13 +1,12 @@
-import dataclasses
-
 import connexion
-
 # from swagger_server.models.user import User  # noqa: E501
-from flask import session
+from flask_api import status
 
+from core.model import to_dict
 from core.model.user import User
-from core.repository.user import UserRepository
+from core.service.user_service import UserService
 from swagger_server.models.inline_response200 import InlineResponse200  # noqa: E501
+from web.exceptions import BadRequest
 
 
 def create_user(body):  # noqa: E501
@@ -22,12 +21,15 @@ def create_user(body):  # noqa: E501
     """
     if connexion.request.is_json:
         json = connexion.request.get_json()  # noqa: E501
-        user = UserRepository.insert_user(json["email"], json["password_hash"])
-        return {
-            "user_id": user.id
-        }
+        try:
+            user = UserService().register(json["email"], json["password"])
+            return {
+                "user_id": user.id
+            }
+        except BadRequest as br:
+            return str(br), status.HTTP_400_BAD_REQUEST
 
-    return 'do some magic!'
+    return {}, status.HTTP_400_BAD_REQUEST
 
 
 def find_by_email(email):  # noqa: E501
@@ -40,10 +42,35 @@ def find_by_email(email):  # noqa: E501
 
     :rtype: str
     """
-    user = UserRepository.find_by_email(email)
+    user = UserService().find_by_email(email)
     if user is None:
         return "User not found with email address", 404
     return user.id
+
+
+def check_credentials(body):  # noqa: E501
+    """Get a user id by email
+
+     # noqa: E501
+
+    :param email: The email of the user to retrieve
+    :type email: str
+
+    :rtype: str
+    """
+    if not connexion.request.is_json:
+        return {}, status.HTTP_400_BAD_REQUEST
+
+    json = connexion.request.get_json()  # noqa: E501
+    valid = UserService().check_credentials(json["email"], json["password"])
+    if valid:
+        user = UserService().find_by_email(json["email"])
+        return {
+            "user_id": user.id,
+            "authenticated": True
+        }
+    else:
+        return {"authenticated": False}, status.HTTP_401_UNAUTHORIZED
 
 
 def get_user(user_id):  # noqa: E501
@@ -57,7 +84,7 @@ def get_user(user_id):  # noqa: E501
     :rtype: User
     """
 
-    return dataclasses.asdict(UserRepository.find_by_id(user_id))
+    return to_dict(UserService().get_user(user_id))
 
 
 def remove_user(user_id):  # noqa: E501
@@ -70,8 +97,8 @@ def remove_user(user_id):  # noqa: E501
 
     :rtype: None
     """
-    UserRepository.delete(user_id)
-    return 'It is done.'
+    UserService().delete_user(user_id)
+    return {}, status.HTTP_204_NO_CONTENT
 
 
 def update_user(user_id):  # noqa: E501
@@ -86,8 +113,7 @@ def update_user(user_id):  # noqa: E501
     """
     if connexion.request.is_json:
         data = connexion.request.get_json()
-        data["id"] = -1
-        body = User(**data)  # noqa: E501
-        UserRepository.update(user_id, body)
+        user = UserService().update_user(user_id, data["email"], data["password"])
+        return to_dict(user), status.HTTP_202_ACCEPTED
 
-    return 'do some magic!'
+    return {}, status.HTTP_400_BAD_REQUEST
